# sunbronze

./: .gitignore  AGENTS.md  activate_venv.ps1  check_api.bat  check_api.ps1  error.txt  logs.1775688639610.json  logs.1775688746012.json  logs.1775689183488.json  logs.1775689436251.json  logs.1775689754924.json  logs.1775689947253.json  logs.1775694817970.json  requirements.txt  reset_local_db.bat  reset_local_db.ps1  response_1775694433869.html  response_1775702183897.json  run_test.bat  start_api.bat  start_api.ps1  start_frontend.bat  start_frontend.ps1
DB/: 001_initial_postgres_schema.sql  002_seed_data.sql  003_seed_barbertest.sql  query1.sql  (+2 more)
backend/: .env  .env.example  README.md  pyproject.toml  requirements.txt
backend/src/sunbronze_api/: __init__.py  main.py
backend/src/sunbronze_api/api/: __init__.py  deps.py  router.py
backend/src/sunbronze_api/api/routes/: appointments.py  auth.py  dev.py  health.py  reference_data.py  staff.py  system_users.py  whatsapp.py
backend/src/sunbronze_api/core/: __init__.py  config.py
backend/src/sunbronze_api/db/: __init__.py  base.py  session.py
backend/src/sunbronze_api/models/: __init__.py  base_mixins.py  entities.py  enums.py
backend/src/sunbronze_api/schemas/: appointments.py  auth.py  dev.py  reference_data.py  staff.py  system_users.py  whatsapp.py
backend/src/sunbronze_api/services/: appointments.py  auth.py  dev.py  reference_data.py  staff.py  system_users.py  whatsapp.py  whatsapp_booking.py
backend/src/sunbronze_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+92 files in other folders)
